parcial 3 terminado XD

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                           
                         </figure>
                         <div class="cuerpo-nota-info">
-                        <h2 class="titulo-nota">MONKEY D. LUFFY (muguiwara no luffy.)</h2>
-                        <p class="info-personaje">personaje principal de la serie one piece del creador (mangaca) Ichiro Oda</p>
+                        <h2 class="titulo-nota">MONKEY D. LUFFY (mugiwara no luffy.)</h2>
+                        <p class="info-personaje" >Monkey D. Luffy, apodado "Sombrero de paja" (Mugiwara no luffy) es el protagonista del anime y manga One Piece. Es un joven cuyo cuerpo está hecho de goma después de comerse una akuma no mi, específicamente la "Gomu Gomu No Mi" la cual le da ese poder. Además de que también utiliza los 3 tipos de Haki </p>
                        <a href="#">
                            <div class="boton">
                                <div>
@@ -67,7 +67,7 @@
                         </figure>
                         <div class="cuerpo-nota-info">
                         <h2 class="titulo-nota">NARUTO UZUMAKI</h2>
-                        <p class="info-personaje">persoaje principal de la serie "naruto"</p>
+                        <p class="info-personaje">Naruto Uzumaki (Uzumaki Naruto) es el protagonista de la serie del manga y anime Naruto y Naruto Shippūden. Él es un joven de Konohagakure, hijo del Cuarto Hokage, Minato Namikaze y su esposa Kushina Uzumaki, además de ser la actual Reencarnación de Asura Ōtsutsuki. Es miembro del Equipo Kakashi junto a Sakura Haruno y Sasuke Uchiha y, además, era el Jinchūriki de la mitad Yang de Kurama hasta que le fue extraido por Madara Uchiha y el más reciente de la mitad Yin de Kurama, además posee parte del Chakra de las otras Bestias con Cola.</p>
                        <a href="#">
                            <div class="boton">
                                <div>
@@ -85,7 +85,8 @@
                         </figure>
                         <div class="cuerpo-nota-info">
                         <h2 class="titulo-nota">NATSU DRAGNEEL (salamadra de fuego)</h2>
-                        <p class="info-personaje">personaje principal de la serie fairy tail </p>
+                        <p class="info-personaje">Natsu Dragneel es el protagonista principal del manga y anime Fairy Tail y miembro del gremio del mismo nombre. Forma equipo con Happy, Lucy Heartfilia, Gray Fullbuster, Wendy Marvell, Charle y Erza Scarlet. Su nombre significa "verano"
+                        Los rasgos más característicos de Natsu son su pelo en punta de color rosa y su bufanda de escamas blancas (que tiene la habilidad de proteger a Natsu de la magia oscura) que le dio Igneel. Natsu tiene una cicatriz en el lado derecho del cuello; el origen es que se la hizo él mismo </p>
                        <a href="#">
                            <div class="boton">
                                <div>
@@ -103,7 +104,7 @@
                         </figure>
                         <div class="cuerpo-nota-info">
                         <h2 class="titulo-nota">LINK</h2>
-                        <p class="info-personaje">personaje principal del juego the legend of zelda</p>
+                        <p class="info-personaje">Link es el nombre del protagonista de The Legend of Zelda. Es generalmente representado como un niño o joven valiente, con vestimenta de color verde que abandona su hogar para cumplir su destino: luchar contra las fuerzas malignas que amenazan la tierra de Hyrule, Termina, etc. En su viaje, aprende a utilizar diferentes armas y objetos con los que supera a los enemigos y obstáculos que encuentra en su camino. Tras un largo camino, Link finalmente vence a su enemigo y se convierte en un héroe legendario. Se le considera un personaje icono y el símbolo de la franquicia Zelda, así como uno de los protagonistas más populares del mundo del videojuego.</p>
                        <a href="#">
                            <div class="boton">
                                <div>
